--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 
       <div class="header-content container">
         <a class="brand-name__link" href="#/">
-          <img class="brand-name__link__image" src="/images/logo.png" alt="CityCare Logo" />
+          <img class="brand-name__link__image" src="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1747914658/IMG-20250522-WA0002_nbxv04.jpg" alt="CityCare Logo" />
           <span class="brand-name__link__text">CityCare App</span>
         </a>
 
@@ -50,7 +50,7 @@
         <hr />
         <div class="footer-content">
           <a class="brand-name__link" href="#/">
-            <img class="brand-name__link__image" src="/images/logo.png" alt="CityCare Logo" />
+            <img class="brand-name__link__image" src="https://res.cloudinary.com/dv2wxvuzn/image/upload/v1747914658/IMG-20250522-WA0002_nbxv04.jpg" alt="CityCare Logo" />
             <span class="brand-name__link__text">CityCare App</span>
           </a>
           <p class="copyright">&copy; 2025 Dicoding. All rights reserved.</p>
